--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "eslint",
     "build:cf": "npx opennextjs-cloudflare build",
-    "preview:cf": "npx wrangler dev",
+    "preview:cf": "npx wrangler dev --port 8788",
+    "local": "lsof -ti :8788 | xargs kill -9 2>/dev/null; npm run build:cf && npm run preview:cf",
     "deploy:cf": "npx wrangler deploy",
     "deploy": "npm run build:cf && npx wrangler pages deploy .open-next --project-name=workout-app",
     "db:generate": "drizzle-kit generate",
@@ -18,7 +19,11 @@
     "db:push:remote": "wrangler d1 execute workout-db --remote --file"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@opennextjs/cloudflare": "^1.16.3",
+    "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.45.1",
@@ -35,6 +40,7 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20260210.0",
     "@tailwindcss/postcss": "^4",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
