--- a/wrangler.toml
+++ b/wrangler.toml
@@ -8,9 +8,10 @@ main = ".open-next/worker.js"
 # Cloudflare Pages build output directory
 pages_build_output_dir = ".open-next"
 
+# Assets configuration
 [assets]
 directory = ".open-next/assets"
-binding = "ASSETS"
+binding = "STATIC_ASSETS"
 
 # D1 Database binding
 [[d1_databases]]
